--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-3227557864439240",
+        enable_page_level_ads: true
+      });
+    </script>
+    <title>My Innovation</title>
   </head>
   <body>
     <noscript>
